<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <DUT Name="T_PBC_IO" Id="{23cea475-9ef2-4eda-a290-b979cc2bc72f}">
    <Declaration><![CDATA[TYPE T_PBC_IO :
STRUCT
	///TODO: describe why this is here
	In_bolPts_PaperSensor: REFERENCE TO BOOL;
	In_bolInputSensor: REFERENCE TO BOOL;
	In_bolOutputSensor: REFERENCE TO BOOL;
	In_bolCapacitySensor: REFERENCE TO BOOL;
	In_bolDoublePaperSensor: REFERENCE TO BOOL;
	In_bolAirPressureOk: REFERENCE TO BOOL;
	Out_bolAirPressureOn: REFERENCE TO BOOL;

	In_bolPtbBelt_Vpc_VacuumSensor: REFERENCE TO BOOL;
	In_bolPtbBelt_Vpc_PumpOk: REFERENCE TO BOOL;
	Out_bolPtbBelt_Vpc_PumpOn: REFERENCE TO BOOL;

	In_uinPtbBelt_Umc_Status: REFERENCE TO UINT;
	In_uinPtbBelt_Umc_ActualSpeed: REFERENCE TO UINT;
	In_uinPtbBelt_Umc_SetSpeed: REFERENCE TO UINT;
	In_uinPtbBelt_Umc_IOData1: REFERENCE TO WORD;
	In_uinPtbBelt_Umc_ECatState: REFERENCE TO UINT;
	In_strPtbBelt_Umc_ECatNetId: REFERENCE TO AMSNETID;
	In_uinPtbBelt_Umc_ECatPort: REFERENCE TO WORD;
	Out_uinPtbBelt_Umc_Control: REFERENCE TO UINT;
	Out_uinPtbBelt_Umc_SetSpeed: REFERENCE TO UINT;

	In_uinPtbDeStacker_Umc_Status: REFERENCE TO UINT;
	In_uinPtbDeStacker_Umc_ActualSpeed: REFERENCE TO UINT;
	In_uinPtbDeStacker_Umc_SetSpeed: REFERENCE TO UINT;
	In_uinPtbDeStacker_Umc_IOData1: REFERENCE TO WORD;
	In_uinPtbDeStacker_Umc_ECatState: REFERENCE TO UINT;
	In_strPtbDeStacker_Umc_ECatNetId: REFERENCE TO AMSNETID;
	In_uinPtbDeStacker_Umc_ECatPort: REFERENCE TO WORD;
	Out_uinPtbDeStacker_Umc_Control: REFERENCE TO UINT;
	Out_uinPtbDeStacker_Umc_SetSpeed: REFERENCE TO UINT;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>